Cleaning up JenkinsClient and reviewing exceptions handling