@@ -28,53 +28,49 @@ import java.util.List;
  */
 public class HttpHeaders extends HashMap<String, List<String>> {
 
-	private static final long serialVersionUID = 4258600664539135240L;
+   private static final long serialVersionUID = 4258600664539135240L;
 
-	public static final String ACCEPT = "Accept";
+   public static final String ACCEPT = "Accept";
 
-	public static final String CONTENT_TYPE = "Content-Type";
+   public static final String CONTENT_TYPE = "Content-Type";
 
-	public static final String CONTENT_LENGTH = "Content-Length";
+   public static final String CONTENT_LENGTH = "Content-Length";
 
-	public static final String AUTHORIZATION = "Authorization";
+   public static final String AUTHORIZATION = "Authorization";
 
-	public static final String USER_AGENT = "User-Agent";
+   public static final String USER_AGENT = "User-Agent";
 
-	public void add(String headerName, String headerValue) {
-		if (!containsKey(headerName)) {
-			put(headerName, new LinkedList<String>());
-		}
-		get(headerName).add(headerValue);
-	}
+   public void add(String headerName, String headerValue) {
+      if (!containsKey(headerName)) {
+         put(headerName, new LinkedList<String>());
+      }
+      get(headerName).add(headerValue);
+   }
 
-	public void setContentType(String mediaType) {
-		add(CONTENT_TYPE, mediaType);
-	}
+   public void setContentType(String mediaType) {
+      add(CONTENT_TYPE, mediaType);
+   }
 
-	public void setUserAgent(String userAgent) {
-		add(USER_AGENT, userAgent);
-	}
+   public void setUserAgent(String userAgent) {
+      add(USER_AGENT, userAgent);
+   }
 
-	public String getContentType() {
-		if (containsKey("Content-Type")) {
-			if (!get("Content-Type").isEmpty()) {
-				return get("Content-Type").iterator().next();
-			}
-		}
-		return null;
-	}
+   public String getContentType() {
+      if (containsKey(CONTENT_TYPE) && !get(CONTENT_TYPE).isEmpty()) {
+         return get(CONTENT_TYPE).iterator().next();
+      }
+      return null;
+   }
 
-	public void setAuthorization(String authorization) {
-		add(AUTHORIZATION, authorization);
-	}
+   public void setAuthorization(String authorization) {
+      add(AUTHORIZATION, authorization);
+   }
 
-	public Long getContentLength() {
-		if (containsKey("Content-Length")) {
-			if (!get("Content-Length").isEmpty()) {
-				return Long.valueOf(get("Content-Length").iterator().next());
-			}
-		}
-		return new Long(-1);
-	}
+   public Long getContentLength() {
+      if (containsKey(CONTENT_LENGTH) && !get(CONTENT_LENGTH).isEmpty()) {
+         return Long.valueOf(get(CONTENT_LENGTH).iterator().next());
+      }
+      return new Long(-1);
+   }
 
 }
